# nvtx-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: check.yml
crates/nvtx-sys/: Cargo.toml  build.rs
crates/nvtx-sys/c/include/: cuda.h  driver_types.h  wrapper.h
crates/nvtx-sys/c/src/: lib.c
crates/nvtx-sys/src/: lib.rs
examples/: domain.rs  domain_threads.rs  push_pop.rs  range.rs  range_push_pop.rs  range_start_end.rs  simple.rs  threads.rs  tracing.rs
src/: category.rs  color.rs  cuda.rs  cuda_runtime.rs  domain.rs  event_argument.rs  event_attributes.rs  lib.rs  local_range.rs  message.rs  native_types.rs  payload.rs  range.rs  ranges.rs  str.rs  sync.rs
src/common/: event_argument.rs  event_attributes.rs  message.rs  mod.rs  range.rs  test_utils.rs
src/domain/: category.rs  event_argument.rs  event_attributes.rs  identifier.rs  local_range.rs  message.rs  mod.rs  range.rs  ranges.rs  registered_string.rs  resource.rs  sync.rs
src/domain/identifier/: cuda.rs  cuda_runtime.rs  generic.rs  mod.rs  pthread.rs
src/tracing/: mod.rs
