[workspace]
members = ["crates/nvtx-sys"]

[workspace.package]
version = "0.1.0"
authors = ["Voltron Data"]
edition = "2021"
rust-version = "1.70.0"
description = "NVIDIA NVTX bindings for Rust"
repository = "https://github.com/voltrondata/nvtx-rs"
readme = "README.md"
publish = false
license = "Apache-2.0"

[package]
name = "nvtx"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = ["color-name", "name-current-thread"]
color-name = ["dep:color-name"]
name-current-thread = ["dep:gettid"]

[dependencies]
color-name = { version = "1.1.0", optional = true }
gettid = { version = "0.1.2", optional = true }
nvtx-sys = { path = "crates/nvtx-sys" }
widestring = "1.0.2"

[[example]]
name = "domain"
required-features = ["color-name"]

[[example]]
name = "range"
required-features = ["color-name"]

[[example]]
name = "range_start_end"
required-features = ["color-name"]

[[example]]
name = "threads"
required-features = ["name-current-thread"]

[[example]]
name = "domain_threads"
required-features = ["name-current-thread"]
