[package]
name = "nvtx-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.37"

[dependencies]
widestring = "1.2.0"

[features]
default = []
cuda = []
cuda_runtime = []
